# adaptive-learning-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  adaptive-learning-platform.code-workspace  docker-compose.yml
.github/workflows/: backend-ci.yml
adaptive_learning_app/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
adaptive_learning_app/android/app/: build.gradle.kts
adaptive_learning_app/app_services/base/app_services/: pubspec.yaml
adaptive_learning_app/app_services/i_app_services/: pubspec.yaml
adaptive_learning_app/app_services/i_app_services/lib/: i_app_services.dart
adaptive_learning_app/ios/Runner/: Info.plist
adaptive_learning_app/ios/Runner.xcodeproj/: project.pbxproj
adaptive_learning_app/lib/app/: app.dart  app_context_ext.dart  app_env.dart  app_providers.dart  depends_providers.dart
adaptive_learning_app/lib/app/app_config/: app_config.dart  app_config.g.dart
adaptive_learning_app/lib/app/http/: app_http_client.dart  auth_interceptor.dart  i_http_client.dart
adaptive_learning_app/lib/di/: di_base_repository.dart  di_container.dart  di_repositories.dart  di_services.dart  di_typedefs.dart
adaptive_learning_app/lib/features/debug/: debug_service.dart  i_debug_service.dart
adaptive_learning_app/lib/features/error/: error_screen.dart
adaptive_learning_app/lib/features/events/: tracking_route_observer.dart
adaptive_learning_app/lib/features/root/: root_screen.dart
adaptive_learning_app/lib/features/splash/: splash_screen.dart
adaptive_learning_app/lib/l10n/: app_en.arb  app_uk.arb  localization_notifier.dart
adaptive_learning_app/lib/router/: app_router.dart
adaptive_learning_app/lib/runner/: app_runner.dart  errors_handlers.dart
adaptive_learning_app/lib/targets/: dev.dart  prod.dart  stage.dart
adaptive_learning_app/web/: index.html  manifest.json
backend/services/analytics_service/: Dockerfile  pyproject.toml
backend/services/analytics_service/src/: config.py  (+5 more)
backend/services/event_service/: pyproject.toml
backend/services/event_service/src/: celery_app.py  celery_producer.py  config.py  database.py  main.py  schemas.py  tasks.py
backend/services/knowledge_graph_service/: .pre-commit-config.yaml  Dockerfile  pyproject.toml  pytest.ini  seed.py
backend/services/knowledge_graph_service/src/: config.py  database.py  logger.py  main.py  schemas.py
backend/services/knowledge_graph_service/src/services/: pathfinder.py
backend/services/knowledge_graph_service/tests/: conftest.py  test_main.py
backend/services/learning_path_service/: Dockerfile  pyproject.toml
backend/services/ml_service/: Dockerfile  pyproject.toml
backend/services/ml_service/src/: celery_app.py  concept_mapping.json  config.py  database.py  generate_production_mapping.py  main.py  schemas.py  tasks.py  utils.py
backend/services/ml_service/src/models/: dkt.py  rl.py
backend/services/ml_service/src/models/data/: dkt_model.pth  rl_model.pth
backend/services/ml_service/src/services/: inference_service.py  irt_engine.py  rl_engine.py
backend/services/user_service/: .pre-commit-config.yaml  Dockerfile  pyproject.toml  pytest.ini
backend/services/user_service/migrations/: env.py
backend/services/user_service/migrations/versions/: 25b2454e7570_add_learning_paths_and_steps_tables.py  2a0e3a325e96_rename_resource_ids_to_resources.py  463ce29e700e_initial_migration_for_users_table.py  5b3e1a59c02c_add_unique_constraint_to_knowledge_.py  961dd67ecd76_add_remedial_fields.py  c9710b89f4a6_add_social_and_profile_fields.py  f2218e1b49e3_add_unique_constraint_to_knowledge_.py  f5e13fc508dd_add_adaptations_table.py  f8cf1f2d4d0d_add_knowledge_states_table.py  fce0823bcec0_add_student_profiles_table_and_link_to_.py
backend/services/user_service/src/: config.py  create_admin.py  database.py  logger.py  main.py  models.py  schemas.py  security.py
backend/services/user_service/tests/: conftest.py  test_main.py
experiments/: analysis_tools.py  experiment_results.csv  run_simulation.py  simulation_env.py  student_agent.py
old_tests/: analyze_results.py  locustfile.py
(+101 files in other folders)
